syntax = "proto3";

package bilibili.app.card.v1;
option go_package = "api";
option java_multiple_files = true;
option java_package = "com.bapis.bilibili.app.card.v1";
option objc_class_prefix = "BAPICardV1Card";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "go-gateway/app/app-svr/app-card/interface/model/card/proto/common.proto";
import "go-gateway/app/app-svr/app-card/interface/model/card/proto/banner.proto";

message SmallCoverV5 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_gif = 2;
    Up up = 3;
    string cover_right_text_1 = 4;
    string right_desc_1 = 5;
    string right_desc_2 = 6;
    ReasonStyle rcmd_reason_style = 7;
    HotwordEntrance hotword_entrance = 8;
    ReasonStyle corner_mark_style = 9;
    int32 right_icon_1 = 10 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    int32 right_icon_2 = 11 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    // 左上角角标
    ReasonStyle left_corner_mark_style = 12;
    string cover_right_text_content_description = 13;
    string right_desc_1_content_description = 14;
}

message SmallCoverV5Ad {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_gif = 2;
    Up up = 3;
    string cover_right_text_1 = 4;
    string right_desc_1 = 5;
    string right_desc_2 = 6;
    ReasonStyle rcmd_reason_style = 7;
    HotwordEntrance hotword_entrance = 8;
    ReasonStyle corner_mark_style = 9;
    int32 right_icon_1 = 10 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    int32 right_icon_2 = 11 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    // 左上角角标
    ReasonStyle left_corner_mark_style = 12;
    string cover_right_text_content_description = 13;
    string right_desc_1_content_description = 14;
}

message HotwordEntrance {
    int64 hotword_id = 1;
    string hot_text = 2;
    string h5_url = 3;
    string icon = 4;
}

message LargeCoverV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_gif = 2;
    Avatar avatar = 3;
    string cover_left_text_1 = 4;
    string cover_left_text_2 = 5;
    string cover_left_text_3 = 6;
    string cover_badge = 7;
    string top_rcmd_reason = 8;
    string bottom_rcmd_reason = 9;
    string desc = 10;
    int32 official_icon = 11 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    int32 can_play = 12;
    ReasonStyle top_rcmd_reason_style = 13;
    ReasonStyle bottom_rcmd_reason_style = 14;
    ReasonStyle rcmd_reason_style_v2 = 15;
    ReasonStyle left_cover_badge_style = 16;
    ReasonStyle right_cover_badge_style = 17;
    string cover_badge_2 = 18;
    LikeButton like_button = 19;
    int32 title_single_line = 20;
    string cover_right_text = 21;
}

message ThreeItemAllV2 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    ReasonStyle top_rcmd_reason_style = 2;
    repeated TwoItemHV1Item item = 3;
}

message TwoItemHV1Item {
    string title = 1;
    string cover = 2;
    string uri = 3;
    string param = 4;
    Args args = 5;
    string goto = 6;
    string cover_left_text_1 = 7;
    int32 cover_left_icon_1 = 8 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_right_text = 9;
}

message RcmdOneItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    ReasonStyle top_rcmd_reason_style = 2;
    SmallCoverRcmdItem item = 3;
}

message SmallCoverRcmdItem {
    string title = 1;
    string cover = 2;
    string uri = 3;
    string param = 4;
    string goto = 5;
    string cover_right_text_1 = 6;
    string right_desc_1 = 7;
    string right_desc_2 = 8;
    string cover_gif = 9;
    int32 right_icon_1 = 10 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    int32 right_icon_2 = 11 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_right_text_content_description = 12;
    string right_desc_1_content_description = 13;
}

message ThreeItemV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    int32 title_icon = 2 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string more_uri = 3;
    string more_text = 4;
    repeated ThreeItemV1Item items = 5;
}

message ThreeItemV1Item {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text = 2;
    int32 cover_left_icon = 3 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string desc_1 = 4;
    string desc_2 = 5;
    string badge = 6;
}

message HotTopic {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc = 2;
    repeated HotTopicItem items = 3;
}

message HotTopicItem {
    string cover = 1;
    string uri = 2;
    string param = 3;
    string name = 4;
}

message DynamicHot {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string top_left_title = 2;
    string desc1 = 3;
    string desc2 = 4;
    string more_uri = 5;
    string more_text = 6;
    repeated string covers = 7;
    string cover_right_text = 8;
    ReasonStyle top_rcmd_reason_style = 9;
}

message MiddleCoverV3 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc1 = 2;
    string desc2 = 3;
    ReasonStyle cover_badge_style = 4;
}

message SmallCoverV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_badge = 2;
    string cover_left_text = 3;
    string desc_1 = 4;
    string desc_2 = 5;
    string desc_3 = 6;
    string title_right_text = 7;
    int32 title_right_pic = 8 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    ReasonStyle top_rcmd_reason_style = 9;
}

message MiddleCover {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    int32 ratio = 2;
    string badge = 3;
    string desc = 4;
    string cover_left_text_1 = 5;
    int32 cover_left_icon_1 = 6 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_2 = 7;
    int32 cover_left_icon_2 = 8 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_3 = 9;
    string cover_right_text = 10;
    ReasonStyle top_rcmd_reason_style = 11;
    ReasonStyle rcmd_reason_style = 12;
}

message ThreeItemH {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated ThreeItemHItem items = 2;
}

message ThreeItemHItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    int32 cover_type = 2 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Type"];
    string desc = 3;
    int32 official_icon = 4 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
}

message ThreeItemHV3 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated string covers = 2;
    string cover_top_text_1 = 3;
    string cover_top_text_2 = 4;
    string desc = 5;
    Avatar avatar = 6;
    int32 official_icon = 7 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
}

message TwoItemV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated TwoItemV1Item items = 2;
}

message TwoItemV1Item {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_badge = 2;
    string cover_left_text_1 = 3;
}

message CoverOnly {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}

message Banner {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string hash = 2;
    repeated BannerItem banner_item = 3;
}

message Topstick {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc = 2;
}

message ChannelSquare {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc_1 = 2;
    string desc_2 = 3;
    repeated ChannelSquareItem item = 4;
}

message ChannelSquareItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    int32 cover_left_icon_1 = 3 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_2 = 4;
    int32 cover_left_icon_2 = 5 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_3 = 6;
}

message ThreeItemHV4 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string more_uri = 2;
    string more_text = 3;
    repeated ThreeItemHV4Item items = 4;
}

message ThreeItemHV4Item {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc = 2;
    string cover_badge = 3;
}

message UpRcmdCover {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    int32 cover_type = 2 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Type"];
    int32 level = 3;
    int32 official_icon = 4 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string desc_1 = 5;
    string desc_2 = 6;
    string desc_3 = 7;
}

message ThreeItemAll {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated ThreeItemAllItem items = 2;
}

message ThreeItemAllItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    int32 cover_type = 2 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Type"];
    string desc = 3;
    int32 official_icon = 4 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    int32 vip_type = 5;
}

message TwoItemHV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc = 2;
    repeated TwoItemHV1Item item = 3;
}

message SmallCoverV6 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc_1 = 2;
}

message SmallCoverConvergeV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    string cover_right_top_text = 3;
    string right_desc_1 = 4;
    ReasonStyle rcmd_reason_style = 5;
    ReasonStyle rcmd_reason_style_v2 = 6;
}

message ChannelNew {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    Button desc_button_2 = 2;
    string desc_1 = 3;
    repeated ChannelNewItem items = 4;
}

message ChannelNewItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    int32 cover_left_icon_1 = 3 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_2 = 4;
    int32 cover_left_icon_2 = 5 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    string cover_left_text_3 = 6;
    ChannelBadge badge = 7;
    string left_text_1 = 8;
}

message LargeChannelSpecial {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string bg_cover = 2;
    string desc_1 = 3;
    string desc_2 = 4;
    string badge = 5;
    ReasonStyle rcmd_reason_style_2 = 6;
}

message ChannelThreeItemHV1 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string more_text = 2;
    string more_uri = 3;
    repeated ChannelNewDetailCustomItem items = 4;
}

message ChannelNewDetailCustomItem {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    int32 cover_left_icon_1 = 3 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    ChannelBadge badge = 4;
    int64 position = 5;
}

message ChannelThreeItemHV2 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string more_text = 2;
    string more_uri = 3;
    repeated ChannelNewDetailCustomItem2 items = 4;
}

message ChannelNewDetailCustomItem2 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    int32 cover_left_icon_1 = 3 [(gogoproto.casttype) = "go-gateway/app/app-svr/app-card/interface/model.Icon"];
    ChannelBadge badge = 4;
    int64 position = 5;
}

message Option {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated string option = 2;
}

message Select {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string desc = 2;
    Button left_button = 3;
    Button right_button = 4;
}

message SmallCoverV8 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_badge = 2;
    string right_desc_1 = 3;
    string right_desc_2 = 4;
    string cover_right_text = 5;
    ReasonStyle bottom_rcmd_reason_style = 6;
    ReasonStyle top_rcmd_reason_style = 7;
}

message Introduction {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}

message LargeCoverV4 {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    string cover_left_text_1 = 2;
    string cover_left_text_2 = 3;
    string cover_left_text_3 = 4;
    string cover_badge = 5;
    int32 can_play = 6;
    Up up = 7;
    string short_link = 8;
    string share_subtitle = 9;
    string play_number = 10;
    string bvid = 11;
    string sub_param = 12;
}

message PopularTopEntrance {
    Base base = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    repeated EntranceItem items = 2;
}

message EntranceItem {
    string goto = 1;
    string icon = 2;
    string title = 3;
    string module_id = 4;
    string uri = 5;
    int64 entrance_id = 6;
    Bubble bubble = 7;
    int32 entrance_type = 8;
}

message Bubble {
    string bubble_content = 1;
    int32 version = 2;
    int64 stime = 3;
}